<resources>
    <string name="app_name">MVVMtest</string>
    <string name="typeface_good_times">fonts/good_times.ttf</string>
    <string name="sample_title_two_way_binding">Two-way binding</string>
    <string name="sample_description_two_way_binding">Two way binding example.</string>
    <string name="edit_text">Edit text</string>
    <string name="two_way_result">Two way result</string>
    <string name="check_box">Check box</string>
    <string name="switch_widget">Switch</string>
    <string name="value_formatter">Value: %1$s</string>
    <string name="combo_states">Combo states</string>
    <string name="toggle_button">Toggle button</string>
    <string name="sample_title_adapter">Adapter</string>
    <string name="sample_description_adapter">RecyclerView bind adapter example</string>
    <string name="adapter_vertical">Horizontal RecyclerView</string>
    <string name="adapter_horizontal">Horizontal RecyclerView</string>
    <string name="sample_title_top_level_injection">Top level injection</string>
    <string name="sample_description_top_level_injection">Injection Activity components into Fragment</string>
    <string name="timer_value">Time: %1$s</string>
    <string name="update">update</string>


</resources>
